# io-engine

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  design.md
.github/workflows/: typos.yml
aio-bindings/: Cargo.toml  build.rs  wrapper.h
benches/: channel_bench.rs
src/: callback_worker.rs  common.rs  context.rs  embedded_list.rs  lib.rs  merge.rs  tasks.rs
src/buffer/: buffer.rs  large.rs  lz4.rs  mod.rs  test.rs  utils.rs
src/driver/: aio.rs  mod.rs  uring.rs
src/scheduler/: aio.rs  callback_worker.rs  common.rs  context.rs  embedded_list.rs  merge.rs  mod.rs  tasks.rs
src/test/: mod.rs  test_context.rs  test_extra.rs  test_merge.rs  test_task.rs
