[package]
name = "io-engine"
version = "0.7.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
repository = "https://github.com/NaturalIO/io-engine"
documentation = "https://docs.rs/io-engine"
keywords = ["io", "aio", "io_uring"]
license = "MIT"
description = """
Library for block-based IO, intend to mask AIO/io_uring underneath.
"""

[dependencies]
libc = "0"
nix = { version = "0", features = ["fs"] }
io-engine-aio-bindings = "0.1"
log = "0.4"
captains-log = "0"
io-buffer = { version="1", features = ["rand"]}
crossfire = "3.1"
io-uring = "0.7"
embed-collections = { version="0", default-features=false, features = ["slist"] }

[dev-dependencies]
rand = "0.9"
md5 = "0"

[features]
default = []
compress = []
