[package]
name = "io-engine"
version = "0.10.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
repository = "https://github.com/NaturalIO/io-engine"
documentation = "https://docs.rs/io-engine"
keywords = ["io", "aio", "io_uring"]
license = "MIT"
description = """
Library for block-based IO, intend to mask AIO/io_uring underneath.
"""

[dependencies]
libc = "0"
rustix = { version = "1", features=["fs"]}
io-engine-aio-bindings = "0.1"
log = "0.4"
captains-log = "0"
io-buffer = { version="1"}
crossfire = ">=3.1.9"
io-uring = "0.7"
embed-collections = { version=">=0.5", default-features=false }

[dev-dependencies]
fastrand = "2.3"
md5 = "0"
io-buffer = { version="1", features = ["rand"]}
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0"

[features]
default = []
compress = []

[[bench]]
name = "channel_bench"
harness = false

[lints.clippy]
new_ret_no_self = "allow"
needless_range_loop = "allow"
type_complexity = "allow"
needless_return = "allow"
mut_from_ref = "allow"
transmute_ptr_to_ref = "allow"
len_without_is_empty = "allow"
